lab1/Test/L1-A-10-93.output
Error Type A at Line 1
Error Type B at Line 38
Error Type A at Line 50
Error Type A at Line 61
Error Type A at Line 63
